[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Davis Raymond Muro <davis.ray.muro@gmail.com>"]
description = "A networked key-value store"
license = "MIT"

[[bin]]
name = "kvs"
test = false

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.14.0"
walkdir = "2.5.0"
